<resources>
    <string name="app_name">Digital UIC</string>
    <string name="title_activity_scrolling_contact">Contact Us</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drawer_activity">drawer_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_mode">IC MODE</string>
    <string name="how_to_use">How To Use</string>
    <string name="find_uic">Find UIC</string>
    <string name="whats_new">What\'s New</string>
</resources>
