<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_icMode_drawer">


    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.digitaluic.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_icMode_drawer"
        android:name="com.example.digitaluic.icMode_drawer"
        android:label="@string/ic_mode"
        tools:layout="@layout/fragment_ic_mode_drawer" />

    <fragment
        android:id="@+id/nav_howToUse_drawer"
        android:name="com.example.digitaluic.howToUse_drawer"
        android:label="@string/how_to_use"
        tools:layout="@layout/fragment_how_to_use_drawer" />
    <fragment
        android:id="@+id/nav_findUIC_drawer"
        android:name="com.example.digitaluic.find_uic"
        android:label="@string/find_uic"
        tools:layout="@layout/fragment_find_uic" />
    <fragment
        android:id="@+id/nav_updates"
        android:name="com.example.digitaluic.updateNotes"
        android:label="@string/whats_new"
        tools:layout="@layout/fragment_update_notes" />

</navigation>